Revision history for Perl extension Bitcoin::Crypto.

{{$NEXT}}

3.001 Tue Sep 24, 2024
	[Changes and fixes]
	- fixed building ecc context on some older perls on Windows

3.000 Fri Sep 20, 2024
	[Improvements]
	- the module will now reject unnormalized (high S) signatures while verifying
	- module now internally uses libsecp256k1
		- all ECDSA operations are now faster and more secure
		- no longer needs Crypt::Perl to produce deterministic signatures
		- requires installation of libsecp256k1 (will try to install with Alien)

2.007 Sun Aug 25, 2024
	[Improvements]
	- add predefined 'pepecoin' and 'pepecoin_testnet' networks (thanks @chromatic)

2.006 Sat Jul 27, 2024
	[Added interface]
	- Bitcoin::Crypto::BIP85 module (deterministic entropy)
	- Bitcoin::Crypto::DerivationPath::get_path_hardened
	- Bitcoin::Crypto::DerivationPath::as_string

	[Improvements]
	- deterministic derivation of entropy as defined in BIP85 is now implemented in Bitcoin::Crypto::BIP85
	- Bitcoin::Crypto::DerivationPath is now automatically stringified back to "m" notation
	- Bitcoin::Crypto::Types is now documented
	- Bitcoin::Crypto::Manual now has some additional examples
	- test suite has been improved and now uses Test2

2.005 Wed Jul 24 2024
	[Added interface]
	- Bitcoin::Crypto::PSBT namespace (support for PSBT)
	- Bitcoin::Crypto::Util::from_format function (the reverse of existing to_format)
	- Bitcoin::Crypto::Util::pack_compactsize function
	- Bitcoin::Crypto::Util::unpack_compactsize function
	- Bitcoin::Crypto::DerivationPath class (internal representation of path)
	- Bitcoin::Crypto::BIP44::get_derivation_path method (getting internal representation of BIP44 path)
	- Bitcoin::Crypto::Network::single_network class method (single-network mode)
	- Bitcoin::Crypto::Network::set_single method
	- Bitcoin::Crypto::Network::unregister method

	[Improvements]
	- PSBT format from BIP174 can now be serialized, deserialized and validated using Bitcoin::Crypto::PSBT